// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`halt.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
__halt_compiler(); the installation data (eg. tar, gz, PHP, etc.)
other text

=====================================output=====================================
<?php
__halt_compiler(); the installation data (eg. tar, gz, PHP, etc.)
other text

================================================================================
`;

exports[`other-single.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

$var = 1;

$var = 1;
?>
Foo
<?php

$var = 1;

__HALT_COMPILER();

=====================================output=====================================
<?php

$var = 1;

$var = 1;
?>
Foo
<?php
$var = 1;

__halt_compiler();

================================================================================
`;

exports[`single.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
__HALT_COMPILER();

=====================================output=====================================
<?php
__halt_compiler();

================================================================================
`;
